drawing snake, apple spawning, score counting, taurus shape